crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__pipe_stats_with_group.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(\"* | stats count() by host\")"
---
SELECT "host", COUNT(*) AS "count"
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
GROUP BY "host"
