crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__pipe_table.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(\"* | table host, service, message\")"
---
SELECT "host", "service", "message"
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
