crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__pipe_tail_after_sort.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(\"* | sort service | tail 3\")"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
ORDER BY "service" ASC
LIMIT 3
