crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__pipe_timechart_auto_bucket_1h.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(\"last=1h | timechart count()\")"
---
SELECT time_bucket(INTERVAL '1 minutes', TRY_CAST("_time" AS TIMESTAMP)) AS "_time", COUNT(*) AS "count"
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE TRY_CAST("_time" AS TIMESTAMP) >= now()::TIMESTAMP - INTERVAL '1 hours'
GROUP BY time_bucket(INTERVAL '1 minutes', TRY_CAST("_time" AS TIMESTAMP))
ORDER BY time_bucket(INTERVAL '1 minutes', TRY_CAST("_time" AS TIMESTAMP)) ASC
