crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__pipe_timechart_multiple_aggs.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(\"* | timechart span=5m count(), avg(duration) by service\")"
---
SELECT time_bucket(INTERVAL '5 minutes', CAST("timestamp" AS TIMESTAMP)) AS "_time", "service", COUNT(*) AS "count", AVG("duration") AS "avg_duration"
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
GROUP BY "_time", "service"
ORDER BY "_time" ASC
