crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__pipe_timechart_with_by.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(\"* | timechart span=1h count() by service\")"
---
SELECT time_bucket(INTERVAL '1 hours', CAST("timestamp" AS TIMESTAMP)) AS "_time", "service", COUNT(*) AS "count"
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
GROUP BY "_time", "service"
ORDER BY "_time" ASC
